--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <th>Produto</th>
                 <th>Quantidade</th>
                 <th>Preço</th>
-                <th>Black friday</th>
+                <th>Black-friday</th>
 
             </tr>
 
